Added Helm / Kub Support

--- a/bGridDataProxy/Properties/launchSettings.json
+++ b/bGridDataProxy/Properties/launchSettings.json
@@ -37,6 +37,10 @@
       "httpPort": 56551,
       "useSSL": true,
       "sslPort": 44336
+    },
+    "Azure Dev Spaces": {
+      "commandName": "AzureDevSpaces",
+      "launchBrowser": true
     }
   }
 }
